--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.6.0",
+    "express": "^4.17.1",
+    "mongoose": "^8.9.3"
   },
   "license": "MIT"
 }
